fix(notes): tags for latest note and overflow or mention links

--- a/src/_includes/layouts/project/_base.scss
+++ b/src/_includes/layouts/project/_base.scss
@@ -255,6 +255,7 @@
     }
     .blogpost.note .mention-link {
         font-size: 1rem;
+        overflow-wrap: anywhere;
     }
     .blogpost.note .blogpost-content {
         row-gap: 0;
