--- a/src/_includes/layouts/writing/_base.scss
+++ b/src/_includes/layouts/writing/_base.scss
@@ -210,6 +210,7 @@
     }
     .note .mention-link {
         font-size: 1rem;
+        overflow-wrap: anywhere;
     }
     .note-content {
         row-gap: 0;
